Add  class for text area and add a footer.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
                 <a class="btn btn-lg btn-danger btn-block" href="javascript:void(0)" onclick="clearUcf()">Clear</a>
             </div>
             <div style="margin-top: 2em">
-                <textarea style="width: 100%; height: 300px;">// Click `Generate`, and results will show here.</textarea>
+                <textarea style="width: 100%; height: 300px;" class="form-control">// Click `Generate`, and results will show here.</textarea>
+            </div>
+            <div style="margin-top: 2em; margin-bottom: 2em">
+                Copyleft - Archie Lu.
             </div>
 
         </div>
