--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>UCF Gen</title>
-        <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
+        <script src="jquery.min.js"></script>
         <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
         <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
         <script src="data.js" type="text/javascript" charset="utf-8"></script>
